--- a/TestProjectForShareRecipies/Views/_ViewImports.cshtml
+++ b/TestProjectForShareRecipies/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TestProjectForShareRecipies
 @using TestProjectForShareRecipies.Models
+@using TestProjectForShareRecipies.Models.Recipe
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
