Implement custom Login, Logout, Register and Account Controller.

--- a/TestProjectForShareRecipies/Views/_ViewImports.cshtml
+++ b/TestProjectForShareRecipies/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TestProjectForShareRecipies
 @using TestProjectForShareRecipies.Models
 @using TestProjectForShareRecipies.Models.Recipe
+@using TestProjectForShareRecipies.Models.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
