--- a/TestProjectForShareRecipies/Views/Account/Login.cshtml
+++ b/TestProjectForShareRecipies/Views/Account/Login.cshtml
@@ -14,13 +14,16 @@
                     </div>
                     <div class="card-body">
                         <form method="post" asp-action="Login">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
                                 <label asp-for="@Model.Email">Email:</label>
                                 <input type="text" class="form-control" asp-for="@Model.Email" required>
+                                <span asp-validation-for="@Model.Email" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="@Model.Password">Password:</label>
                                 <input type="password" class="form-control" asp-for="@Model.Password" required>
+                                <span asp-validation-for="@Model.Password" class="text-danger"></span>
                             </div>
                             <button type="submit" class="btn btn-primary">Login</button>
                         </form>
