--- a/TestProjectForShareRecipies/Views/Shared/_Layout.cshtml
+++ b/TestProjectForShareRecipies/Views/Shared/_Layout.cshtml
@@ -22,6 +22,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Recipe" asp-action="AllRecipes">All Recipes</a>
+                        </li>
+                        
+                        @if(User.Identity.IsAuthenticated) {
+                            <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Recipe" asp-action="AddRecipe">Add Recipe</a>
+                            </li>
+                        }
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
