--- a/TestProjectForShareRecipies/Views/Home/Index.cshtml
+++ b/TestProjectForShareRecipies/Views/Home/Index.cshtml
@@ -1,8 +1,52 @@
-﻿@{
+﻿@model IEnumerable<RecipeIndexModel>
+
+@{
     ViewData["Title"] = "Home Page";
+    var recipes = Model.ToList();
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@if (!recipes.Any()) 
+{
+    <div class="mt-4 p-5 bg-light">
+        <h1 class="display-4">Welcome to the Share Recipes App. The best place for review and share youre recipes!</h1>
+        <p class="lead">
+            There are no recipes in the system yet! So why don't you just add one?
+        </p>
+        <hr class="my-4">
+        <p class="lead">
+            @if (this.User.Identity.IsAuthenticated) 
+            {
+                <a asp-controller="Recipe" asp-action="AddRecipe" class="btn btn-primary btn-lg" role="button">Add Recipe</a>
+            }
+        </p>
+    </div>
+}
+
+<div class="mb-5"></div>
+
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        @for (int i = 0; i < recipes.Count(); i++)
+        {
+            var recipe = recipes[i];
+                    <div class="carousel-item @(i == 0 ? "active" : string.Empty)">
+                        <img class="d-block w-100" style="height:500px"
+                    src="@recipe.Picture" alt="@recipe.Name">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>
+                                <a class="btn btn-primary" asp-controller="Recipe" asp-action="Details"
+                            asp-route-id="@recipe.Id"> @recipe.Name</a>
+                            </h5>
+                        </div>
+                    </div>
+        }
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
