--- a/TestProjectForShareRecipies/Views/_ViewImports.cshtml
+++ b/TestProjectForShareRecipies/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using TestProjectForShareRecipies.Models
 @using TestProjectForShareRecipies.Models.Recipe
 @using TestProjectForShareRecipies.Models.Account
+@using TestProjectForShareRecipies.Models.Home
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
