--- a/TestProjectForShareRecipies/Views/Recipe/AllRecipes.cshtml
+++ b/TestProjectForShareRecipies/Views/Recipe/AllRecipes.cshtml
@@ -22,5 +22,75 @@
             </div>
         </div>
 
+        <div class="form-group col-md-3">
+            <label asp-for="SearchTerm"></label>
+            <input asp-for="SearchTerm" class="form-control" placeholder="..." />
+        </div>
+
+        <div class="form-group col-md-3">
+            <div class="form-group">
+                <label asp-for="Sorting"></label>
+                <select asp-for="Sorting" class="form-control">
+                    <option value="0">Alphabetically</option>
+                    <option value="1">Newest</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="form-group mt-4 p-2">
+                <input type="submit" value="Search" class="btn btn-primary" />
+            </div>
+        </div>
+
     </div>
 </form>
+
+@{
+    var previousPage = Model.CurrentPage - 1;
+    if (previousPage < 1)
+    {
+        previousPage = 1;
+    }
+
+    var maxPage = Math.Ceiling((double)Model.TotalRecipesCount / AllRecipesQueryModel.RecipesPerPage);
+}
+
+<div class="row mb-5">
+    <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-start">
+        <a class="btn btn-primary @(Model.CurrentPage == 1 ? "dissabled" : string.Empty)"
+            asp-controller="Recipe"
+            asp-action="AllRecipes"
+            asp-route-currentPage="@previousPage"
+            asp-route-category="@Model.Category"
+            asp-route-searchTerm="@Model.SearchTerm"
+            asp-route-sorting="@((int)Model.Sorting)"><<</a>
+    </div>
+    
+
+    @{
+        var shouldButtonBeDisbled = Model.CurrentPage == maxPage || !Model.Recipes.Any();
+    }
+
+    <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end">
+        <a class="btn btn-primary @(shouldButtonBeDisbled ? "disabled" : string.Empty)"
+            asp-controller="Recipe"
+            asp-action="AllRecipes"
+            asp-route-currentPage="@(Model.CurrentPage + 1)"
+            asp-route-category="@Model.Category"
+            asp-route-searchTerm="@Model.SearchTerm"
+            asp-route-sorting="@((int)Model.Sorting)">>></a>
+    </div>
+</div>
+
+@if (!Model.Recipes.Any())
+{
+    <h2 class="text-center">No recipes found by the given criteria!</h2>
+}
+
+<div class="row">
+    @foreach (var recipe in Model.Recipes) 
+    {
+        <partial name="_RecipePartial" model="@recipe" />
+    }
+</div>
