--- a/TestProjectForShareRecipies/Views/Recipe/Details.cshtml
+++ b/TestProjectForShareRecipies/Views/Recipe/Details.cshtml
@@ -1,7 +1,33 @@
-﻿@model RecipeFormModel
+﻿@model RecipeDetailsModel
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<!--TO DO: Must to implement Details View Page-->
+<h2 class="text-center">@ViewData["Title"]</h2>
+<hr />
+
+<div class="container" style="display:inline">
+    <div class="row">
+        <div class="col-4">
+            <img class="card-img-top" style="width: 20rem;" src="@Model.Picture" alt="Recipe Picture" />
+        </div>
+        <div class="card col-8 border-0">
+            <p style="font-size: 25px;"><u>@Model.Name</u></p>
+            <p>Author: <b>@Model.Author</b></p>
+            <p>Description: <b>@Model.Description</b></p>
+            <p><b>Ingredients:</b></p>
+            @foreach (var ingredient in Model.Ingredients) 
+            {
+                <p><b>@ingredient.Name @ingredient.Quantity @ingredient.MeassureUnit</b></p>
+            }
+            <div class="form-inline">
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a class="btn btn-warning" asp-controller="Recipe" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+                    <a class="btn btn-danger" asp-controller="Recipe" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
+                }
+            </div>
+        </div>
+    </div>
+</div>
