--- a/TestProjectForShareRecipies/Views/_ViewImports.cshtml
+++ b/TestProjectForShareRecipies/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using TestProjectForShareRecipies.Models.Recipe
 @using TestProjectForShareRecipies.Models.Account
 @using TestProjectForShareRecipies.Models.Home
+@using TestProjectForShareRecipies.Models.Rating
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
