Adding average rating in the Details View and in the AllRecipes View. Implement searching by most rated recipe.

--- a/TestProjectForShareRecipies/Views/Recipe/AllRecipes.cshtml
+++ b/TestProjectForShareRecipies/Views/Recipe/AllRecipes.cshtml
@@ -33,6 +33,7 @@
                 <select asp-for="Sorting" class="form-control">
                     <option value="0">Alphabetically</option>
                     <option value="1">Newest</option>
+                    <option value="2">Most Rated</option>
                 </select>
             </div>
         </div>
