Make some experience improvement in index page and allRecipes page.

--- a/TestProjectForShareRecipies/Views/Recipe/AllRecipes.cshtml
+++ b/TestProjectForShareRecipies/Views/Recipe/AllRecipes.cshtml
@@ -10,7 +10,7 @@
 <form method="get">
     <div class="row">
         
-        <div class="form-group col-md-3 d-flex justify-content-between">
+        <div class="form-group col-md-3">
             <div class="form-group">
                 <label asp-for="Category"></label>
                 <select asp-for="Category" class="form-control">
@@ -39,7 +39,7 @@
         </div>
 
         <div class="col-md-3">
-            <div class="form-group mt-4 p-2">
+            <div class="form-group mt-3 p-2">
                 <input type="submit" value="Search" class="btn btn-primary" />
             </div>
         </div>
