--- a/TestProjectForShareRecipies/Views/Home/Index.cshtml
+++ b/TestProjectForShareRecipies/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home Page";
     var recipes = Model.ToList();
 }
-
+ 
 @if (!recipes.Any()) 
 {
     <div class="mt-4 p-5 bg-light">
@@ -24,14 +24,15 @@
 
 <div class="mb-5"></div>
 
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         @for (int i = 0; i < recipes.Count(); i++)
         {
             var recipe = recipes[i];
                     <div class="carousel-item @(i == 0 ? "active" : string.Empty)">
-                        <img class="d-block w-100" style="height:500px"
-                    src="@recipe.Picture" alt="@recipe.Name">
+                        <div class="text-center">
+                            <img class="img-fluid"  src="@recipe.Picture" alt="@recipe.Name">
+                        </div>
                         <div class="carousel-caption d-none d-md-block">
                             <h5>
                                 <a class="btn btn-primary" asp-controller="Recipe" asp-action="Details"
