Create AllUsers Page with controller and service. Start to implement UserDetails.

--- a/TestProjectForShareRecipies/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TestProjectForShareRecipies/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,2 @@
-﻿@using TestProjectForShareRecipies.Areas.Admin
+﻿@using TestProjectForShareRecipies.Areas.Admin.Models.UserManagement
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
