--- a/TestProjectForShareRecipies/Views/Shared/_LayoutAdmin.cshtml
+++ b/TestProjectForShareRecipies/Views/Shared/_LayoutAdmin.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-light" asp-area="Admin" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="Admin" asp-controller="Users" asp-action="AllUsers">Users</a>
+                            <a class="nav-link text-light" asp-area="Admin" asp-controller="UserManagement" asp-action="AllUsers">Users</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="Admin" asp-controller="Options" asp-action="Index">Options</a>
