Create UserDetails View. Add User role in the seed info and in the every new RegisteredUser. Add switch option for roles in the Admin area.

--- a/TestProjectForShareRecipies/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TestProjectForShareRecipies/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@using TestProjectForShareRecipies.Areas.Admin.Models.UserManagement
+@using TestProjectForShareRecipies.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
