--- a/TestProjectForShareRecipies/Areas/Admin/Views/UserManagement/UserDetails.cshtml
+++ b/TestProjectForShareRecipies/Areas/Admin/Views/UserManagement/UserDetails.cshtml
@@ -4,5 +4,60 @@
     ViewBag.Title = "Details for User";
 }
 
-<h2 class="text-center">@ViewBag.Title</h2>
-<hr />
+<div class="container text-center">
+    <h2>@ViewBag.Title</h2>
+    <hr />
+    <p style="font-size: 18px"><b>@Model.FirstName @Model.LastName - Email: @Model.Email</b></p>
+    @if (!Model.Roles.Any()) {
+            <a class="btn btn-danger btn-sm" asp-area="Admin" asp-controller="UserManagement" asp-action="RemoveAdminRole" asp-route-id="@Model.Id">Make it user!</a>
+    }
+    @foreach (var role in Model.Roles)
+    {
+        <p><b>User has a role: @role</b></p>
+        @if (role == "Admin")
+        {
+                     <a class="btn btn-danger btn-sm" asp-area="Admin" asp-controller="UserManagement" asp-action="RemoveAdminRole" asp-route-id="@Model.Id">Make it user!</a>
+        }
+        else 
+        {
+             <a class="btn btn-danger btn-sm" asp-area="Admin" asp-controller="UserManagement" asp-action="AddAdminRole" asp-route-id="@Model.Id">Make it admin!</a>
+        }
+        
+    }
+    
+</div>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h4 class="text-center">User's Recipes</h4>
+      @foreach (var recipe in Model.Recipes){
+        <div class="continer">
+          <div class="row">
+              <div class="card col-4">
+                  <img class="card-img-top" style="width: 10rem;" src="@recipe.Picture" alt="Recipe Picture" />
+              </div>
+              <div class="card col-8">
+                    <p style="font-size: 18px;"><u>@recipe.Name</u></p>
+                    <p>Rating: <b>@recipe.Rating</b></p>
+                    <a class="btn btn-danger btn-sm" asp-area="Admin" asp-controller="Options" asp-action="DeleteRecipe" asp-route-id="@recipe.Id">Delete Recipe</a>
+              </div>
+          </div>
+        </div>
+      }
+      
+      
+      <div class="continer">
+          <div class="row">
+              <div class="col-4">
+                  
+              </div>
+          </div>
+      </div>
+    </div>
+    <div class="col">
+      User's Ratings
+    </div>
+  </div>
+</div>
