Add possability to delete recipes of users by Amin.

--- a/TestProjectForShareRecipies/Areas/Admin/Views/UserManagement/UserDetails.cshtml
+++ b/TestProjectForShareRecipies/Areas/Admin/Views/UserManagement/UserDetails.cshtml
@@ -16,11 +16,11 @@
         <p><b>User has a role: @role</b></p>
         @if (role == "Admin")
         {
-                     <a class="btn btn-danger btn-sm" asp-area="Admin" asp-controller="UserManagement" asp-action="RemoveAdminRole" asp-route-id="@Model.Id">Make it user!</a>
+                     <a class="btn btn-danger btn-sm" asp-area="Admin" asp-controller="UserManagement" asp-action="RemoveAdminRole" asp-route-id="@Model.Id">Switch to user!</a>
         }
         else 
         {
-             <a class="btn btn-danger btn-sm" asp-area="Admin" asp-controller="UserManagement" asp-action="AddAdminRole" asp-route-id="@Model.Id">Make it admin!</a>
+             <a class="btn btn-danger btn-sm" asp-area="Admin" asp-controller="UserManagement" asp-action="AddAdminRole" asp-route-id="@Model.Id">Switch to admin!</a>
         }
         
     }
@@ -41,7 +41,7 @@
               <div class="card col-8">
                     <p style="font-size: 18px;"><u>@recipe.Name</u></p>
                     <p>Rating: <b>@recipe.Rating</b></p>
-                    <a class="btn btn-danger btn-sm" asp-area="Admin" asp-controller="Options" asp-action="DeleteRecipe" asp-route-id="@recipe.Id">Delete Recipe</a>
+                    <a class="btn btn-danger btn-sm" asp-area="Admin" asp-controller="RecipeManagement" asp-action="DeleteRecipe" asp-route-id="@recipe.Id">Delete Recipe</a>
               </div>
           </div>
         </div>
